--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loom.platform=forge
     yarn_mappings=1.16.5+build.10
 
 # Mod Properties
-    mod_version=1.0.0-1.16.x
+    mod_version=1.0.0
     maven_group=org.thinkingstudio.dels
     archives_base_name=DisableEarlyLoadingScreen
     mod_id=dels
